--- a/app/datenschutzerklaerung/page.mdx
+++ b/app/datenschutzerklaerung/page.mdx
@@ -33,9 +33,9 @@ My website does not employ cookies for tracking purposes or storing user data.
 
 ### 3. Website Hosting
 
-Third-party providers within the European Union offer services related to hosting and displaying the website and provide infrastructure services, computing capacity, storage, databases, maintenance, and security services.
+Third-party providers within the European Union offer services related to hosting and displaying the website and provide infrastructure services, computing capacity, storage, databases, maintenance, and security services. Additionally, the domain name for this website was registered through Vercel Inc., located in the United States, but BunnyWay d.o.o., located in Slovenia, is used as the DNS provider.
 
-These providers are:
+These infrastructure and service providers are:
 
 netcup GmbH\
 Daimlerstrasse 25\
@@ -51,6 +51,11 @@ BunnyWay d.o.o.\
 Dunajska cesta 165\
 1000 Ljubljana\
 Slovenia
+
+Vercel Inc.\
+340 S Lemon Ave #4133\
+Walnut, CA 91789\
+USA
 
 ### 4. Communication via Email
 
